--- a/Doppelganger/base.html
+++ b/Doppelganger/base.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="monfile.js"></script>
     <script type="text/javascript" src="nav.js"></script>
     <script type="text/javascript" src="img.js"></script>
-   <link rel="stylesheet" type="text/css" href="base.scss"/>
+   <link rel="stylesheet" type="text/css" href="base.css"/>
 </head>
 <body>
 
